fix points from sheet: for tresi, nazwa and strategia

--- a/src/app/nazwa-dla-firmy/nazwa.css
+++ b/src/app/nazwa-dla-firmy/nazwa.css
@@ -21,7 +21,7 @@
   margin: 20px 0px;
   line-height: 67px;
   font-size: 85px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   color: #373737;
   letter-spacing: -0.025em;
 }
@@ -33,15 +33,15 @@
   margin-top: 30px;
 }
 .pnazw-page .catalog-submit-button .download-catalog-button {
-  font-family: "Arial";
+  font-family: 'Arial';
   font-weight: 500;
   letter-spacing: -0.025em;
   font-size: 20px;
   line-height: 25px;
   padding: 23px 40px;
   width: auto;
-  border: 1px solid #aa2e2d;
-  background-color: #aa2e2d !important;
+  border: 1px solid var(--brand-blue);
+  background-color: var(--brand-blue);
   margin-top: 10px;
   color: white;
 }
@@ -62,7 +62,7 @@
   padding: 0 15px;
   padding-bottom: 50px;
   font-size: 51px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   color: #373737;
   font-weight: 900;
   text-align: center;
@@ -84,7 +84,7 @@
 .theme-desc {
   margin-bottom: 40px;
   color: #515151;
-  font-family: "Georgia";
+  font-family: 'Georgia';
   font-size: 24px;
   line-height: 33px;
   letter-spacing: -0.025em;
@@ -119,7 +119,7 @@ img.names-custom-image {
   padding: 0 15px;
   padding-bottom: 50px;
   font-size: 65px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   color: #373737;
   font-weight: 900;
   text-align: center;
@@ -137,7 +137,7 @@ img.names-custom-image {
 .projects-theme-subtitle1 {
   display: block;
   color: #818181;
-  font-family: "Georgia", serif;
+  font-family: 'Georgia', serif;
   font-style: italic;
   line-height: 42px;
   font-size: 40px;
@@ -161,7 +161,7 @@ img.names-custom-image {
   color: black;
 }
 .pnazw-page .names-list-info {
-  font-family: "Arial";
+  font-family: 'Arial';
 }
 
 .names-list-info {
@@ -195,7 +195,7 @@ img.names-custom-image {
 }
 
 .names-client-desc {
-  font-family: "Playfair Display";
+  font-family: 'Playfair Display';
   font-size: 48px;
   font-weight: 900 !important;
   letter-spacing: -0.025em;
@@ -214,7 +214,7 @@ img.names-custom-image {
 } */
 
 .names-container-Litery:after {
-  content: "";
+  content: '';
   background-image: url(https://cdn.owocni.pl/img/projektowanie-nazw-img/Litery.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -255,7 +255,7 @@ img.names-custom-image {
 
 .projects-gray-section-custom-font {
   font-size: 45px;
-  font-family: "Georgia", serif;
+  font-family: 'Georgia', serif;
   font-style: italic;
 }
 .pnazw-page .new-wierzymy .img-wierzymy {
@@ -295,7 +295,7 @@ img.names-custom-image {
   margin-top: 35px;
 }
 .iglarki-section-main-header {
-  font-family: "Playfair Display Black", serif;
+  font-family: 'Playfair Display Black', serif;
   line-height: 85px;
   margin-top: 150px;
   margin-bottom: 50px;
@@ -306,7 +306,7 @@ img.names-custom-image {
   line-height: 80px;
   padding: 0 15px;
   padding-bottom: 50px;
-  font-family: "Playfair Display", serif;
+  font-family: 'Playfair Display', serif;
   color: #373737;
   text-align: center;
   position: relative;
@@ -332,7 +332,7 @@ img.names-custom-image {
   padding-bottom: 60px;
 }
 .names-client-name {
-  font-family: "Arial";
+  font-family: 'Arial';
   font-size: 30px;
   font-weight: 900;
   padding-bottom: 20px;
@@ -345,14 +345,14 @@ img.names-custom-image {
   background: linear-gradient(to right, #aa2e2d 0%, #aa2e2d 100%);
   width: 168px;
   height: 10px;
-  content: "";
+  content: '';
   position: absolute;
   left: calc(50% - 84px);
   bottom: 15px;
   top: 75px;
 }
 .names-client-desc {
-  font-family: "Playfair Display";
+  font-family: 'Playfair Display';
   font-size: 48px;
   font-weight: 900 !important;
   letter-spacing: -0.025em;
@@ -393,7 +393,7 @@ img.names-custom-image {
   position: relative;
 }
 .custom-after-top-line::after {
-  content: "";
+  content: '';
   position: absolute;
   bottom: -10px;
   left: calc(50% - 84px);
@@ -636,7 +636,7 @@ section.projects-gray-opinion-4 {
   .theme-desc {
     margin-bottom: 40px;
     color: #515151;
-    font-family: "Georgia";
+    font-family: 'Georgia';
     font-size: 22px;
     line-height: 30px;
   }
