--- a/src/components/organisms/main/main.module.css
+++ b/src/components/organisms/main/main.module.css
@@ -161,13 +161,13 @@ img.hardImg {
 .order .orderContent button {
   width: 100%;
   padding: 10px;
-  background: #d21e00;
+  background: var(--brand-blue);
   font-size: 28px;
   border-radius: 50px;
   color: white;
   border: none;
   font-weight: 500;
-  box-shadow: 0 6px 0px #d21e006e;
+  box-shadow: 0 6px 0px var(--brand-blue);
 }
 
 .order .orderContent button:hover {
