--- a/src/components/organisms/tresci-sprzedazowe/tresci-footer/TesciFooter.css
+++ b/src/components/organisms/tresci-sprzedazowe/tresci-footer/TesciFooter.css
@@ -27,8 +27,8 @@
   text-align: left;
 }
 .tersci_footer_bottom_btn {
-  background-color: #438d07;
-  border: 0.666667px solid #438d07;
+  background-color: var(--brand-blue);
+  border: 0.666667px solid var(--brand-blue);
   box-shadow: #c1c1c1 5px 5px 0px -1px;
   cursor: pointer;
   padding: 4px 15px;
