--- a/src/components/organisms/main/Hero/hero.module.css
+++ b/src/components/organisms/main/Hero/hero.module.css
@@ -136,7 +136,7 @@
   background: #00000080;
   width: 100%;
   height: 100%;
-  content: "";
+  content: '';
   position: absolute;
   z-index: 0;
 }
@@ -184,7 +184,6 @@
   .heroVideo {
     background: black;
     padding: 170px 0 200px;
-
   }
 
   .heroImg1 {
@@ -205,7 +204,7 @@
 
   .heroImg4 {
     margin: -330px 0 0 600px;
-    width: 250px
+    width: 250px;
   }
 
   .subtitleContainer {
@@ -226,12 +225,11 @@
   .hero {
     max-height: 650px;
   }
-
 }
 
 @media screen and (max-width: 767px) {
   .heroVideo {
-    padding: 180px 0 404px;
+    padding: 180px 0 250px;
   }
 
   .hero {
