--- a/src/app/projektowanie-logo/logoDesign.css
+++ b/src/app/projektowanie-logo/logoDesign.css
@@ -193,7 +193,8 @@ img.projects-main-image-logop {
 .theme-title1 {
   padding: 0 15px;
   padding-bottom: 35px;
-  font-size: 100px;
+  font-size: 60px;
+  line-height: 1.5;
   font-family: 'Playfair Display', serif;
   color: #373737;
   font-weight: 900;
@@ -227,7 +228,7 @@ img.projects-main-image-logop {
 .img-background-logop {
   display: block;
   margin: 50px auto 0;
-  max-width: 100%;
+  max-width: 800px;
 }
 
 .custom-container1 {
@@ -570,8 +571,8 @@ img.projects-main-image-logop {
 .projects-wierzymy-img {
   position: absolute;
   right: 0;
-  left: -330px;
-  max-width: 700px;
+  left: -200px;
+  max-width: 550px;
 }
 
 .logo-button-box {
@@ -583,10 +584,6 @@ img.projects-main-image-logop {
   text-align: center;
   margin-top: 30px;
   margin-bottom: 30px;
-}
-
-.galeria-logo-style {
-  margin-bottom: -20vw;
 }
 
 .galleryDecPara {
@@ -1306,7 +1303,7 @@ img.zooImage.position-relative {
     padding: 0 25px;
     padding-bottom: 30px;
     font-size: 75px;
-    line-height: 75px;
+    line-height: 1.3;
   }
 
   .projects-custom-white-container {
