--- a/src/components/organisms/marketing-consulting/pricing/pricing-option.css
+++ b/src/components/organisms/marketing-consulting/pricing/pricing-option.css
@@ -70,7 +70,12 @@ p.po_subtitle {
   grid-template-columns: 20% 80%;
   justify-content: center;
   padding: 40px 100px;
-  gap: 30px;
+  /* gap: 30px; */
+}
+
+.brand_desktop {
+  width: 50%;
+  margin: 0 auto;
 }
 
 .brand_mobile {
@@ -93,7 +98,7 @@ p.po_subtitle {
     padding: 50px 20px;
   }
   .po_brands p {
-    text-align: left;
+    text-align: center;
   }
   .po_brands img {
     width: 100%;
@@ -121,6 +126,10 @@ p.po_subtitle {
 
   .brand_desktop {
     display: none;
+  }
+
+  .po_brands p {
+    text-align: center;
   }
 
   .brand_mobile {
