zamow buttons style change

--- a/src/app/zamow/zamow.css
+++ b/src/app/zamow/zamow.css
@@ -19,14 +19,14 @@
 
 .btt_btn {
   padding: 10px 18px;
-  background-color: #d21e00;
+  background-color: var(--brand-blue);
   border-radius: 30px;
   font-size: 24px;
   color: white;
-  box-shadow: 0 0 0 0 #981a05, 0 4px 0 0 #981a05;
-  border: 2px solid #981a05;
+  box-shadow: 0 0 0 0 var(--brand-blue-hover), 0 4px 0 0 var(--brand-blue-hover);
+  border: 2px solid var(--brand-blue);
 }
 
 .btt_btn:hover {
-  box-shadow: 0 2px 0 0 #981a05;
+  box-shadow: 0 2px 0 0 var(--brand-blue-hover);
 }
