nazwa dla screen image style adjustment

--- a/src/app/nazwa-dla-firmy/nazwa.css
+++ b/src/app/nazwa-dla-firmy/nazwa.css
@@ -214,6 +214,8 @@ img.names-custom-image {
 } */
 
 .names-container-Litery:after {
+  /* to be deleted hence display none*/
+  display: none;
   content: '';
   background-image: url(https://cdn.owocni.pl/img/projektowanie-nazw-img/Litery.jpg);
   background-repeat: no-repeat;
