--- a/src/components/organisms/team/team.module.css
+++ b/src/components/organisms/team/team.module.css
@@ -457,7 +457,7 @@
 }
 
 .peopleVideoContent .projectBtn {
-  border: 4px solid #ffc600;
+  border: 4px solid var(--brand-blue);
   border-radius: 50px;
   padding: 10px 20px;
   text-decoration: none;
@@ -466,13 +466,13 @@
   font-size: 20px;
   font-weight: 600;
   text-align: center;
-  color: white;
+  color: #000;
   margin: 0 auto;
 }
 
 .peopleVideoContent .projectBtn:hover {
-  background: #ffc600;
-  color: black;
+  background: var(--brand-blue);
+  color: #fff;
 }
 
 .peopleVideoContent .scheduleBtn {
@@ -485,17 +485,18 @@
   font-size: 20px;
   grid-template-columns: 85% 15%;
   font-weight: 600;
-  color: white;
+  color: #000;
 }
 
 .peopleVideoContent .scheduleBtn:hover {
-  background: #ffc600;
+  background: var(--brand-blue);
   border-radius: 100px;
+  color:#fff;
 }
 
 .peopleVideoContent .scheduleBtn div {
   padding: 2px;
-  background-color: #ffc600;
+  background-color: var(--brand-blue);
   width: 30px;
   height: 30px;
   border-radius: 100%;
@@ -691,7 +692,7 @@
   }
 
   .img20 img {
-    margin: -13px 0 0 -60px;
+    margin: -70px 0 0 -60px;
   }
 
   .teamContent {
@@ -894,8 +895,8 @@
     width: 100% !important;
   }
   .bannerVideo video {
-    width: 190% !important;
-    margin-inline: -10px;
+    width: 135% !important;
+    margin-inline: -60px;
     display: block;
   }
 
@@ -913,6 +914,6 @@
   }
 
   .BannerBotImg {
-    min-height: 250px;
+    min-height: 0px;
   }
 }
