--- a/src/app/tresci-sprzedazowe/sales.css
+++ b/src/app/tresci-sprzedazowe/sales.css
@@ -17,6 +17,11 @@ section.sales_banner {
   background-position: -1px 0px;
   z-index: -1;
 }
+.copywriter-top-section-banner img{
+  width: 75%;
+  float: right;
+  margin-top: 100px;
+}
 
 .copywriter-page .page-top .top-section-banner-text {
   margin-left: -75px;
@@ -299,7 +304,8 @@ section.business_tools {
 
 .copywriter-custom-gray-header-1 {
   color: #cacaca;
-  font-size: 122px;
+  font-size: 90px;
+  line-height: 1.3;
   font-family: 'Playfair Display', Serif;
   font-weight: 900;
   margin: 60px 0;
@@ -412,7 +418,7 @@ strong {
 
 .copywriter-ksiazka-img {
   margin-top: -200px;
-  max-width: 100%;
+  max-width: 50%;
 }
 
 .copywriter-intro-bg-5-label {
@@ -814,6 +820,11 @@ section#sec1 {
 /* ----------------------------------------------------------midea screen ------------------------------------- */
 
 @media only screen and (max-width: 1024px) {
+  .copywriter-top-section-banner img {
+    width: 100%;
+    float: inherit;
+    margin-top: 0px;
+}
   .copywriter-top-section-banner {
     position: relative;
     top: 0;
@@ -926,6 +937,7 @@ section#sec1 {
     margin-top: 0px;
     margin-inline: auto;
     display: block;
+    max-width: 100%;
   }
 
   .copywriter-intro-bg-5-label {
