--- a/src/app/projektowanie-logo/logoDesign.css
+++ b/src/app/projektowanie-logo/logoDesign.css
@@ -59,8 +59,8 @@ h6 {
 }
 
 img.projects-main-image-logop {
-  max-width: 90%;
-  margin: 40px auto 0;
+  max-width: 50%;
+  margin: 80px 0 0 auto;
   display: block;
 }
 
@@ -141,7 +141,7 @@ img.projects-main-image-logop {
 .top-section-banner {
   background: none;
   top: 170px;
-  right: 50px;
+  right: 120px;
   position: absolute;
   z-index: -1;
 }
@@ -194,7 +194,7 @@ img.projects-main-image-logop {
   padding: 0 15px;
   padding-bottom: 35px;
   font-size: 60px;
-  line-height: 1.5;
+  line-height: 1.2;
   font-family: 'Playfair Display', serif;
   color: #373737;
   font-weight: 900;
@@ -372,7 +372,7 @@ img.projects-main-image-logop {
 .projects-co-otrzymasz {
   padding: 0 45px;
   padding-bottom: 50px;
-  font-size: 135px;
+  font-size: 80px;
   font-family: 'Playfair Display', serif;
   color: #373737;
   font-weight: 900;
@@ -381,7 +381,7 @@ img.projects-main-image-logop {
   margin-left: -15px;
   margin-right: -15px;
   letter-spacing: -0.025em;
-  line-height: 128px;
+  line-height: 1.2;
 }
 
 .projects-margin-b-60 {
