--- a/src/app/strategia-marketingowa/strategiamarketingowa.css
+++ b/src/app/strategia-marketingowa/strategiamarketingowa.css
@@ -99,8 +99,9 @@
 .MainContentTwo {
   margin-bottom: 80px;
   background-image: url(https://images.prismic.io/marketersi/Zo0UOR5LeNNTw7vb_Untitleddesign-1-.png?auto=format,compress);
-  /* background-position: 0px -200px; */
+  background-position: 650px 320px;
   background-repeat: no-repeat;
+  background-size: 1000px;
 }
 
 .MainContentTwo_Container p {
@@ -2148,8 +2149,8 @@ img.strategyImg {
   }
 
   .StrategyAction_Content_Title {
-    font-size: 45px;
-    line-height: 45.8px;
+    font-size: 35px;
+    line-height: 1.3;
   }
 
   .StrategyActionImage img {
