fix all point as per the client mail

--- a/src/app/nazwa-dla-firmy/nazwa.css
+++ b/src/app/nazwa-dla-firmy/nazwa.css
@@ -14,6 +14,7 @@
 .pnazw-page .pnazw-topbanner-title {
   font-size: 85px;
   line-height: 70px;
+  text-align: center;
 }
 .top-banner-title {
   display: block;
