--- a/src/components/organisms/nazwa/hero/nazwa-hero.css
+++ b/src/components/organisms/nazwa/hero/nazwa-hero.css
@@ -2,3 +2,12 @@
     max-width: 1000px;
     margin: 0 auto;
 }
+.nazwaHeroImg{
+    width: 75%;
+    display: block;
+margin: 0 auto;
+}
+.nazwaHeroBtn{
+    margin: 0 auto;
+    display: block !important;
+}
